--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "MunkoCustomSounds",
-    "version_number": "1.0.0",
-    "website_url": "",
-    "description": "description of mod",
+    "version_number": "1.1.0",
+    "website_url": "https://github.com/azuremyer/MunkoCustomSounds",
+    "description": "Made by Azure (Munko) for friends and other people that want to have their own custom sounds",
     "dependencies": [
         "BepInEx-BepInExPack-5.4.2100",
         "no00ob-LCSoundTool-1.2.2",
